@@ -36,6 +36,7 @@ BackgroundColor = R=255,G=255,B=215
 ##############################  MISC ######################################
 #HideSubElements.Activity=
 #HideSubElements.ActivitySet=
+HideSubElements.ActualParameter = ScriptVersion ScriptGrammar
 #HideSubElements.Application=
 #HideSubElements.ArrayType=
 #HideSubElements.Condition=
