@@ -58,6 +58,7 @@ BackgroundColor = R=255,G=255,B=215
 #XMLBasicPanel.SimplePanelTextHeight=20
 
 #HideSubElements.XMLGroupPanel.Activity = Deadlines Limit Documentation Icon ExtendedAttributes SimulationInformation TransitionRestrictions NodeGraphicsInfos
+HideSubElements.XMLGroupPanel.ActualParameter = ScriptVersion ScriptGrammar
 #HideSubElements.XMLGroupPanel.Association = Object ConnectorGraphicsInfos
 #HideSubElements.XMLGroupPanel.Artifact = NodeGraphicsInfos
 #HideSubElements.XMLGroupPanel.DataField =
